# testrunner-68k-native

./: .gitignore  .gitmodules  Makefile  Rules.post.mk  Rules.pre.mk  test_example.s
examples/: test_framework.h
examples/minimal_c/: hello.c
src/: CMakeLists.txt  amigaos-toolchain.cmake
src/EmbeddedTestFramework/: CMakeLists.txt  test_main.c  test_main.h
src/EmbeddedTestRunner/: CMakeLists.txt  EmbeddedTestRunner.c  EmbeddedTestRunner.h  EmbeddedTestRunnerAsm.h  EmbeddedTestRunnerAsm.s  TestResult.h
src/HunkFileParser/: .gitattributes  CMakeLists.txt  HunkFileParser.c  HunkFileParser_test.cpp  LRUCachedFile.c  LRUCachedFileReader.h  LRUCachedFileReader_test.cpp  LRUCachedFile_test.cpp
src/TestExecutableInspector/: CMakeLists.txt  TestExecutableInspector.c  gettimeofday.c
src/blah/: CMakeLists.txt  Endian.c  Endian.h  Endian_test.cpp  HunkFileParser.c  HunkFileParser.h  HunkFileParser_test.cpp  LRUCachedFile.c  LRUCachedFile.h  LRUCachedFileReader.c  LRUCachedFileReader.h  LRUCachedFileReader_test.cpp  LRUCachedFile_test.cpp  LinearAllocator.c  LinearAllocator.h  LinearAllocator_test.cpp  TestDescriptor.h  test.c
src/examples/: test_framework.h
src/examples/minimal_c/: CMakeLists.txt  hello.c
